log
Thu Apr 16 07:55:51 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
b59d9e3
Thu Apr 16 08:08:48 PM UTC 2026: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:5: error: ‘hashKey’ undeclared (first use in this function); did you mean ‘hash’?
   62 |     hashKey = hash(key, map->capacity);
      |     ^~~~~~~
      |     hash
hashmap.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   65 |     if (map->buckets[hashKey] == NULL || map->buckets[hashKey]->key == NULL)
      |     ^~
hashmap.c:67:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   67 |         (map->size)++;
      |         ^
hashmap.c:68:5: error: ‘else’ without a previous ‘if’
   68 |     else {
      |     ^~~~
cc1: all warnings being treated as errors
8aa305d
Thu Apr 16 08:09:06 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:65:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   65 |     if (map->buckets[hashKey] == NULL || map->buckets[hashKey]->key == NULL)
      |     ^~
hashmap.c:67:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   67 |         (map->size)++;
      |         ^
hashmap.c:68:5: error: ‘else’ without a previous ‘if’
   68 |     else {
      |     ^~~~
cc1: all warnings being treated as errors
7f53995
Thu Apr 16 08:09:27 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|6
total_score: 5/60
c9870d1
Thu Apr 16 08:10:48 PM UTC 2026: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  3|6
total_score: 5/60
351e903
Thu Apr 16 08:11:46 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|6
total_score: 5/60
bd23541
Thu Apr 16 08:15:05 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
b492630
Thu Apr 16 08:16:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
09ca202
Thu Apr 16 08:19:07 PM UTC 2026: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:35: error: too few arguments to function ‘calloc’
   48 |     HashMap * newMap = (HashMap *)calloc(sizeof(HashMap));
      |                                   ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
a4d739e
Thu Apr 16 08:20:25 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
dac156f
